handle exceptions from Uglifier

--- a/app/views/javascript/index.html.erb
+++ b/app/views/javascript/index.html.erb
@@ -1,4 +1,5 @@
 <form method="post" action="">
+  <%= @error %>
   <div>
     <textarea id="javascript" name="javascript"><%= @output %></textarea>
   </div>
