add line numbers to CodeMirror

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
 <script src="/js/codemirror-4.12/mode/javascript/javascript.js"></script>
 
 <script language="javascript">
-CodeMirror.fromTextArea(document.getElementById('javascript'), {autofocus: true});
+CodeMirror.fromTextArea(document.getElementById('javascript'), {autofocus: true, lineNumbers: true});
 </script>
 
 <style>
