change submit button to minify

--- a/app/views/javascript/index.html.erb
+++ b/app/views/javascript/index.html.erb
@@ -25,5 +25,5 @@
     <legend>General Options</legend>
     <input type="checkbox" name="[options][enclose]"><label for="[options][enclose]">Enclose</label>
   </fieldset>
-  <button type="submit" class="btn btn-primary btn-lg">submit</button>
+  <button type="submit" class="btn btn-primary btn-lg">Minify!</button>
 </form>
